--- a/src/includes/components/head.liquid
+++ b/src/includes/components/head.liquid
@@ -13,7 +13,7 @@
     {% if title == "Home" %}
     {{ site.title }} · {{ site.tagline }}
     {% elsif series %}
-    {{ series }}: {{ part }} 
+    {{ series | strip }}: {{ part }} 
     {% else %}
     {{ title | strip }} · {{ site.title }}
     {% endif %}
