Start writing next adventure

--- a/src/includes/components/title.liquid
+++ b/src/includes/components/title.liquid
@@ -16,7 +16,7 @@
           {{ subtitle }}
         {% elsif part %}
           {{ part }}  
-          {% if part-title %}
+          {%- if part-title -%}
             : {{ part-title }}
           {% endif %}
         {% endif %}
