Complete adventure in academia 6

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -33,6 +33,13 @@
   margin-right: 10px;
 }
 
+.title-date {
+  color: #9a9a9a;
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 1.25em;
+}
+
 .post-img {
   width: 100%;
   margin-right: 20px;
