Add theory seminar line

--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -13,7 +13,7 @@
 
 <p>
     I am a member of the
-    <a href={{ links.theory }} title="University of Birmingham Theory Group webpage">University of Birmingham Theory Group</a>.
+    <a href={{ links.theory }} title="University of Birmingham Theory Group webpage">University of Birmingham Theory Group</a> and, along with <a href={{ people.tdj.web }} title="Tom de Jong's website">Tom de Jong</a>, organise the research group's <a href="http://talks.bham.ac.uk/show/index/86">weekly seminar</a>.
 </p>
 
 <h3>Contact me</h3>
