--- a/src/includes/redirect.liquid
+++ b/src/includes/redirect.liquid
@@ -1,6 +1,7 @@
 ---
 layout: default
-style: redirect
+styles: 
+  - redirect
 ---
 
 <meta http-equiv="refresh" content="0; url='{{ redirect.to }}'" />
