Add georgejkaye domain email

--- a/src/includes/index/intro.liquid
+++ b/src/includes/index/intro.liquid
@@ -19,7 +19,8 @@
 <h3>Contact me</h3>
 
 <ul>
-    <li>{{ people.me.email }}</li>
+    <li><b>University:</b> {{ people.me.email.uni }}</li>
+    <li><b>Personal:</b> {{ people.me.email.personal }}</li>
     <li>{{ people.me.address }}</li>
 </ul>
 
