--- a/src/includes/components/title.liquid
+++ b/src/includes/components/title.liquid
@@ -1,5 +1,5 @@
 <div class="header-bar">
-  <div class="header-bar-content">
+  <div class="header-bar-content container">
     <div class="title-bar">
       <h1 class="title">
         {% if page.url == "/" %}
