--- a/sass/header.scss
+++ b/sass/header.scss
@@ -3,67 +3,36 @@
 
 $nav-height: 75px;
 
-.spacer {
-  height: $nav-height;
-  @media (max-width: ($mobile-width + $buffer)) {
-    display: none;
-  }
-}
-
-.nav-bar {
-  @media (min-width: ($mobile-width + $buffer)) {
-    position: fixed;
-  }
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  z-index: 999;
-  border-bottom: 2px solid $background;
+.site-name-bar {
   background-color: $accent;
+  border-bottom: 2px solid $background;
 }
 
-.nav-bar-content {
-  text-align: center;
+.site-name-centre {
   display: flex;
-  height: $nav-height;
-  padding: 10px 0 10px 0;
-
-  @media (max-width: ($mobile-width + $buffer)) {
-    padding-left: 1em;
-    padding-right: 1em;
-
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.left-nav {
-  flex: 1;
-  display: flex;
+  margin: auto;
   align-items: center;
-
-  @media (max-width: ($mobile-width + $buffer)) {
-    margin: auto;
-    justify-content: center;
-  }
+  padding: $content-padding;
 }
 
 .site-name {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-  flex-direction: row;
+  color: $pink;
+  font-size: 2em;
+  font-weight: bold;
 }
 
-.right-nav {
+.nav-bar {
   display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
+  margin: auto;
+  padding: 0 $content-padding 10px $content-padding;
+  background-color: $accent;
+  flex-wrap: wrap;
+}
 
-  @media (max-width: ($mobile-width + $buffer)) {
-    display: none;
-  }
+.nav-link {
+  font-weight: bold;
+  font-size: 1.1em;
+  margin-right: 20px;
 }
 
 .nav-site-image {
@@ -82,27 +51,15 @@ $nav-height: 75px;
   text-decoration: none;
 }
 
-.nav-link {
-  font-weight: bold;
-  font-size: 1em;
-  margin: 2px 10px 0 10px;
-}
-
 .header-bar {
   background-color: $accent;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: auto;
-  z-index: 999;
-  text-align: center;
-  padding: 2rem 0rem;
+  padding: $content-padding;
 }
 
 .header-bar-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .subtitle,
@@ -111,8 +68,7 @@ $nav-height: 75px;
 }
 
 .tagline {
-  text-align: center;
-  max-width: 80%;
+  max-width: 90%;
   margin-top: 10px;
   font-size: 1.25em;
 }
