[fix] Force utf8 encoding

--- a/src/includes/components/head.liquid
+++ b/src/includes/components/head.liquid
@@ -1,14 +1,12 @@
 <head>
-
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <!-- CSS -->
   <link rel="stylesheet" href="/css/core.css" />
   <link rel="stylesheet" href="/css/{{ style }}.css" />
   <link rel="stylesheet" href="/css/header.css" />
   <link rel="stylesheet" href="/css/syntax.css" />
-
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-
   <title>
     {% if title == "Home" %}
     {{ site.title }} &middot; {{ site.tagline }}
@@ -18,9 +16,7 @@
     {{ title | strip }} &middot; {{ site.title }}
     {% endif %}
   </title>
-
   <meta name="description" content="{{ site.meta }}">
-
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,8 +26,6 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
     rel="stylesheet">
-
   <!-- Icons -->
   <link rel="icon" href="/images/favicon.ico" type="image/ico" />
-
 </head>
