[style] Change font to roboto

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -9,7 +9,7 @@ $buffer: 50px;
 html {
   overflow-y: scroll;
   background-color: $background;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   line-height: 1.5;
 
