--- a/sass/header.scss
+++ b/sass/header.scss
@@ -18,7 +18,7 @@ $nav-height: 75px;
 .site-name {
   color: $pink;
   font-size: 2em;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .nav-bar {
@@ -31,7 +31,7 @@ $nav-height: 75px;
 }
 
 .nav-link {
-  font-weight: bold;
+  // font-weight: bold;
   font-size: 1.1em;
   margin-right: 20px;
 }
