[style] Make subtitles and taglines centered

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -70,10 +70,10 @@ $nav-height: 75px;
 .subtitle,
 .tagline {
   color: $subtitle;
+  text-align: center;
 }
 
 .tagline {
-  max-width: 90%;
   margin-top: 10px;
   font-size: 1.25em;
 }
