[fix] Fix styling in train page

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -134,6 +134,7 @@ $content-padding: 16px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
 }
 
 .page-number {
