--- a/sass/core.scss
+++ b/sass/core.scss
@@ -2,19 +2,21 @@
 
 $mobile-width: 500px;
 $content-width: 800px;
-$small-content-width: 750px;
-$smaller-content-width: 600px;
+$small-content-width: 600px;
 $buffer: 50px;
 
 html {
   overflow-y: scroll;
   background-color: $background;
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
   line-height: 1.5;
 
-  @media (max-width: ($small-content-width + $buffer)) {
+  @media (max-width: ($content-width + $buffer)) {
     font-size: 16px;
+  }
+
+  @media (min-width: ($content-width + $buffer)) {
+    font-size: 20px;
   }
 }
 
@@ -101,16 +103,22 @@ td, th {
   padding: 0.25em 0.5rem;
 }
 
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  margin: auto;
+  padding: 0;
+  height: 0;
+  line-height: 0;
+}
+
 .container,
 .header-bar-content {
   margin: auto;
 
   @media (min-width: ($mobile-width + $buffer)) {
     max-width: $mobile-width;
-  }
-
-  @media (min-width: ($smaller-content-width + $buffer)) {
-    max-width: $smaller-content-width;
   }
 
   @media (min-width: ($small-content-width + $buffer)) {
@@ -155,5 +163,5 @@ $content-padding: 16px;
   background-color: $accent;
   padding: 10px;
   padding-left: 20px;
-  margin: 15px 0px;
+  margin: 0 15px 10px 15px;
 }
