[style] Change blog styles

--- a/src/includes/components/tag.liquid
+++ b/src/includes/components/tag.liquid
@@ -1,1 +1,1 @@
-<a class="post-tag" href="/blog/{{ tag }}/" title="Blogposts tagged with {{ tag }}">{{ tag }}</a>
+<a class="post-tag post-info-item" href="/blog/{{ tag }}/" title="Blogposts tagged with {{ tag }}">{{ tag }}</a>
