--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -3,34 +3,63 @@
 
 .post {
   margin-bottom: 1em;
+  padding: 0 20px;
 }
 
 .post-content {
   display: flex;
-  @media (max-width: ($mobile-width + $buffer)) {
-    flex-direction: column;
-  }
+  flex-direction: column;
 }
 
 .post-header {
   margin-bottom: 0.5em;
 }
 
+.post-titles {
+  display: flex;
+  margin-bottom: 10px;
+  @media (min-width: ($content-width + $buffer)) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  @media (max-width: ($content-width + $buffer)) {
+    flex-direction: column;
+  }
+}
+
 .post-title {
   color: $pink;
   display: inline;
-  margin-right: 10px;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .post-subtitle {
   color: $green;
-  font-size: 1.75em;
+  font-size: 1.25em;
+  @media (min-width: ($content-width + $buffer)) {
+    margin-left: auto;
+    text-align: right;
+  }
+}
+
+
+.post-info {
+  display: flex;
+  gap: 5px;
+  margin-bottom: 15px;
+  align-items: flex-start;
+
+  @media (max-width: ($content-width + $buffer)) {
+    flex-direction: column;
+  }
 }
 
 .post-date {
-  color: #9a9a9a;
-  font-weight: bold;
-  margin-right: 10px;
+  background-color: $green;
+  font-family: monospace;
+  color: $background;
 }
 
 .title-date {
@@ -41,15 +70,9 @@
 }
 
 .post-img {
+  display: block;
   width: 100%;
-  margin-right: 20px;
   flex: 1;
-}
-
-.post-preview {
-  @media (min-width: ($mobile-width + $buffer)) {
-    width: 300px;
-  }
 }
 
 .post-readmore {
@@ -58,16 +81,21 @@
 }
 
 .post-tags {
-  margin-top: 25px;
+  display: flex;
+  gap: 5px;
+  @media (min-width: ($content-width + $buffer)) {
+    margin-left: auto;
+  }
 }
 
 .post-tag {
   background-color: $foreground;
   font-family: monospace;
   color: $background;
+}
+
+.post-info-item {
   font-weight: bold;
   padding: 2px 5px 2.5px 5px;
   border-radius: 5px;
-  margin: 0 2px;
-  text-align: center;
 }
