--- a/src/includes/blog-entry.liquid
+++ b/src/includes/blog-entry.liquid
@@ -1,28 +1,32 @@
-<div class="post">
+<div class="card post">
     <div class="post-header">
         <a href={{ post.url }}>
-            <h2 class="post-title">
-            {% if post.data.series %}
-                {{ post.data.series }}
-            {% else %}
-                {{ post.data.title }}
-            {% endif %}
-            </h2>
-            <span class="post-subtitle">
-        {% if post.data.part %}
-                {{ post.data.part }}
-            {% elsif post.data.subtitle %}
-                {{ post.data.subtitle }}
-            {% endif %}
-            </span>
+            <div class="post-titles">
+                <div class="post-title">
+                    {% if post.data.series %}
+                        {{ post.data.series }}
+                    {% else %}
+                        {{ post.data.title }}
+                    {% endif %}
+                </div>
+                <div class="post-subtitle">
+                    {% if post.data.part %}
+                        {{ post.data.part }}
+                    {% elsif post.data.subtitle %}
+                        {{ post.data.subtitle }}
+                    {% endif %}
+                </div>
+            </div>
         </a>
         <div class="post-info">
-            {% if post.data.date %}<span class="post-date">{{ post.data.date | prettyDate }}</span>{% endif %}
-            {% for tag in post.data.tags %}
-            {% if tag != "blog" %}
-            {% include "components/tag" %}
-            {% endif %}
-            {% endfor %}
+            {% if post.data.date %}<span class="post-date post-info-item">{{ post.data.date | prettyDate }}</span>{% endif %}
+            <div class="post-tags">
+                {% for tag in post.data.tags %}
+                    {% if tag != "blog" %}
+                        {% include "components/tag" %}
+                    {% endif %}
+                {% endfor %}
+            </div>
         </div>
     </div>
     <div class="post-content">
