--- a/sass/stations.scss
+++ b/sass/stations.scss
@@ -1,13 +1,20 @@
 @import "core.scss";
 
+.stations {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 .station {
   width: 300px;
 }
 
 .station-img {
+  margin-bottom: 0px;
   width: 32%;
 
-  @media (max-width: $content-width) {
-    width: 49%;
+  @media (max-width: ($content-width + $buffer)) {
+    width: 48%;
   }
 }
