--- a/sass/core.scss
+++ b/sass/core.scss
@@ -133,21 +133,23 @@ button {
 $content-padding: 16px;
 
 .content {
-  padding: $content-padding;
+  padding: 0 20px 20px 20px;
 }
 
 .counter {
-  margin: 25px auto;
+  padding: 20px 0 40px 0;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  gap: 20px 0px;
 }
 
 .page-number {
-  margin: 0 5px;
-  font-size: 1.5em;
+  margin: 5px;
+  font-size: 1em;
+  font-weight: bold;
   background-color: $accent;
   padding: 5px 10px;
   border-radius: 5px;
