[fix] Change card spacing

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -163,7 +163,6 @@ $content-padding: 16px;
 
 .card {
   background-color: $accent;
-  padding: 10px;
-  padding-left: 20px;
+  padding: 10px 20px;
   margin: 0 15px 10px 15px;
 }
