--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,7 @@
 html {
   overflow-y: scroll;
   background-color: #282a36;
-  font-family: "Roboto", sans-serif;
+  font-family: monospace;
   line-height: 1.5;
 }
 @media (max-width: 850px) {
@@ -131,21 +131,23 @@ button {
 }
 
 .content {
-  padding: 16px;
+  padding: 0 20px 20px 20px;
 }
 
 .counter {
-  margin: 25px auto;
+  padding: 20px 0 40px 0;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  gap: 20px 0px;
 }
 
 .page-number {
-  margin: 0 5px;
-  font-size: 1.5em;
+  margin: 5px;
+  font-size: 1em;
+  font-weight: bold;
   background-color: #383a59;
   padding: 5px 10px;
   border-radius: 5px;
@@ -159,43 +161,75 @@ button {
 
 .card {
   background-color: #383a59;
-  padding: 10px;
-  padding-left: 20px;
+  padding: 10px 20px;
   margin: 0 15px 10px 15px;
 }
 
 .post {
   margin-bottom: 1em;
+  padding: 0 20px;
 }
 
 .post-content {
   display: flex;
-}
-@media (max-width: 550px) {
-  .post-content {
-    flex-direction: column;
-  }
+  flex-direction: column;
 }
 
 .post-header {
   margin-bottom: 0.5em;
 }
 
+.post-titles {
+  display: flex;
+  margin-bottom: 10px;
+}
+@media (min-width: 850px) {
+  .post-titles {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 850px) {
+  .post-titles {
+    flex-direction: column;
+  }
+}
+
 .post-title {
   color: #ff79c6;
   display: inline;
-  margin-right: 10px;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .post-subtitle {
   color: #50fa7b;
-  font-size: 1.75em;
+  font-size: 1.25em;
+}
+@media (min-width: 850px) {
+  .post-subtitle {
+    margin-left: auto;
+    text-align: right;
+  }
+}
+
+.post-info {
+  display: flex;
+  gap: 5px;
+  margin-bottom: 15px;
+  align-items: flex-start;
+}
+@media (max-width: 850px) {
+  .post-info {
+    flex-direction: column;
+  }
 }
 
 .post-date {
-  color: #9a9a9a;
-  font-weight: bold;
-  margin-right: 10px;
+  background-color: #50fa7b;
+  font-family: monospace;
+  color: #282a36;
 }
 
 .title-date {
@@ -206,15 +240,9 @@ button {
 }
 
 .post-img {
+  display: block;
   width: 100%;
-  margin-right: 20px;
   flex: 1;
-}
-
-@media (min-width: 550px) {
-  .post-preview {
-    width: 300px;
-  }
 }
 
 .post-readmore {
@@ -223,18 +251,25 @@ button {
 }
 
 .post-tags {
-  margin-top: 25px;
+  display: flex;
+  gap: 5px;
+}
+@media (min-width: 850px) {
+  .post-tags {
+    margin-left: auto;
+  }
 }
 
 .post-tag {
   background-color: #f2f2f2;
   font-family: monospace;
   color: #282a36;
+}
+
+.post-info-item {
   font-weight: bold;
   padding: 2px 5px 2.5px 5px;
   border-radius: 5px;
-  margin: 0 2px;
-  text-align: center;
 }
 
 /*# sourceMappingURL=blog.css.map */
