--- a/sass/core.scss
+++ b/sass/core.scss
@@ -8,7 +8,7 @@ $buffer: 50px;
 html {
   overflow-y: scroll;
   background-color: $background;
-  font-family: monospace;
+  font-family: "Source Code Pro", monospace;
   line-height: 1.5;
 
   @media (max-width: ($content-width + $buffer)) {
@@ -16,7 +16,7 @@ html {
   }
 
   @media (min-width: ($content-width + $buffer)) {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
