--- a/sass/header.scss
+++ b/sass/header.scss
@@ -62,6 +62,10 @@ $nav-height: 75px;
   align-items: center;
 }
 
+.title-bar {
+  padding: 0 25px;
+}
+
 .subtitle,
 .tagline {
   color: $subtitle;
