--- a/css/header.css
+++ b/css/header.css
@@ -225,6 +225,10 @@ button {
   align-items: center;
 }
 
+.title-bar {
+  padding: 0 25px;
+}
+
 .subtitle,
 .tagline {
   color: rgba(255, 255, 255, 0.5);
