[style] Add styling to code tags

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -113,6 +113,13 @@ button {
   line-height: 0;
 }
 
+code {
+  color: #c9c5be;
+  background-color: $accent;
+  padding: 0 5px;
+  border-radius: 5px;
+}
+
 .container,
 .header-bar-content {
   margin: auto;
