[styles] Make images not 100 by default

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -70,9 +70,12 @@
 }
 
 .post-img {
+  margin: 0 0 10px 0;
+}
+
+.post-img > img {
   display: block;
   width: 100%;
-  flex: 1;
 }
 
 .post-readmore {
