--- a/src/includes/default.liquid
+++ b/src/includes/default.liquid
@@ -11,7 +11,7 @@
     </div>
     <div class="nav-bar">
       {% for link in nav.all-links %}
-          <a class="nav-link {% if link.target == page.url %}selected{% endif %}" href={{ link.target }}>{{ link.title }}</a>
+          <a class="nav-link{% if link.target == page.url %} selected{% endif %}" href="{{ link.target }}">{{ link.title }}</a>
       {% endfor %}
     </div>
     <div class="nav-button">
@@ -21,7 +21,7 @@
   <div id="nav-mobile" class="nav-mobile">
     {% for link in nav.all-links %}
         <div>
-          <a class="nav-link-mobile {% if link.target == page.url %}selected{% endif %}" href={{ link.target }}>{{ link.title }}</a>
+          <a class="nav-link-mobile{% if link.target == page.url %} selected{% endif %}" href="{{ link.target }}">{{ link.title }}</a>
         </div>
     {% endfor %}
   </div>
