--- a/src/includes/post.liquid
+++ b/src/includes/post.liquid
@@ -5,7 +5,7 @@ permalink: /blog/{% if dir %}{{ dir }}/{{ part | slugify }}{% elsif series %}{{ 
 ---
 <div class="post">
   {% if image %}
-  <img class="main-post-img" src={{ image }} alt={{ alt }}>
+  <img class="main-post-img" src="{{ image }}" alt="{{ alt }}">
   {% endif %}
   {{ content }}
 </div>
