[fix] Make stations use letters for pages

--- a/src/includes/blog-entry.liquid
+++ b/src/includes/blog-entry.liquid
@@ -1,4 +1,4 @@
-<div class="card post">
+<div class="post">
     <div class="post-header">
         <a href="{{ post.url }}">
             <div class="post-titles">
