--- a/src/includes/default.liquid
+++ b/src/includes/default.liquid
@@ -2,33 +2,44 @@
 <html lang="en-us">
 {% include "components/head" %}
 <body>
-  <div class="site-name-bar">
-    <div class="site-name-centre">
-        <img class="nav-site-image" src="{{ people.me.picture }}" alt="me">
-        <a class="site-name" href="/">
-          George Kaye
-        </a>
+  <header>
+    <div class="site-name-bar">
+      <div class="site-name-centre">
+          <img class="nav-site-image" src="{{ people.me.picture }}" alt="me">
+          <a class="site-name" href="/">
+            George Kaye
+          </a>
+      </div>
+      <div class="nav-bar">
+        {% for link in nav.all-links %}
+            {% if link.target == page.url %}
+              <span class="nav-link selected">{{ link.title }}</span>
+            {% else %}
+              <a class="nav-link" href="{{ link.target }}">{{ link.title }}</a>
+            {% endif %}
+        {% endfor %}
+      </div>
+      <div class="nav-button">
+          <img
+            title="Open navigation"
+            alt="Hamburger button"
+            id="nav-hamburger"
+            src="/images/hamburger.svg"
+          />
+      </div>
     </div>
-    <div class="nav-bar">
+    <div id="nav-mobile" class="nav-mobile">
       {% for link in nav.all-links %}
-          <a class="nav-link{% if link.target == page.url %} selected{% endif %}" href="{{ link.target }}">{{ link.title }}</a>
+          <div>
+            <a class="nav-link-mobile{% if link.target == page.url %} selected{% endif %}" href="{{ link.target }}">{{ link.title }}</a>
+          </div>
       {% endfor %}
     </div>
-    <div class="nav-button">
-        <img title="Open navigation" id="nav-hamburger" src="/images/hamburger.svg" />
-    </div>
-  </div>
-  <div id="nav-mobile" class="nav-mobile">
-    {% for link in nav.all-links %}
-        <div>
-          <a class="nav-link-mobile{% if link.target == page.url %} selected{% endif %}" href="{{ link.target }}">{{ link.title }}</a>
-        </div>
-    {% endfor %}
-  </div>
-  {% include "components/title" %}
-  <div id="text" class="content container wide">
+    {% include "components/title" %}
+  </header>
+  <main id="text" class="content container wide">
     {{ content }}
-  </div>
+  </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/scripts/scripts.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
