--- a/sass/index.scss
+++ b/sass/index.scss
@@ -18,9 +18,7 @@
     display: none;
   }
   max-width: 250px;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 20px;
+  margin: 10px 0;
 }
 
 // news
