--- a/css/core.css
+++ b/css/core.css
@@ -104,6 +104,12 @@ code {
   border-radius: 5px;
 }
 
+@media (max-width: 550px) {
+  .title {
+    padding: 0 20px;
+  }
+}
+
 .container,
 .header-bar-content {
   margin: auto;
