--- a/css/blog.css
+++ b/css/blog.css
@@ -21,6 +21,14 @@ body {
   color: #f2f2f2;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 300;
+}
+
 h1 {
   font-size: 3.5em;
   margin-top: 0;
@@ -100,12 +108,6 @@ code {
   border-radius: 5px;
 }
 
-@media (max-width: 550px) {
-  .title {
-    padding: 0 20px;
-  }
-}
-
 .container,
 .header-bar-content {
   margin: auto;
@@ -134,7 +136,7 @@ code {
 }
 
 .counter {
-  padding: 20px 0;
+  padding-bottom: 20px;
   text-align: left;
   display: flex;
   flex-wrap: wrap;
@@ -148,13 +150,17 @@ code {
   margin: 0 5px;
 }
 
+.number-block > a {
+  text-decoration: none;
+}
+
 .page-number {
   font-size: 1em;
-  font-weight: bold;
   background-color: #383a59;
   padding: 5px 10px;
   border-radius: 5px;
   font-family: monospace;
+  text-decoration: none;
 }
 
 .current-page {
@@ -165,7 +171,12 @@ code {
 .card {
   background-color: #383a59;
   padding: 10px 20px;
-  margin: 0 15px 10px 15px;
+  margin: 0 0 10px 0;
+}
+@media (max-width: 550px) {
+  .card {
+    padding: 0 20px 10px 20px;
+  }
 }
 
 .post {
@@ -183,15 +194,25 @@ code {
   margin-bottom: 0.5em;
 }
 
+.post-header > a {
+  text-decoration: none;
+}
+.post-header > a:hover {
+  text-decoration: underline;
+}
+
+.post-header > a {
+  text-decoration: none;
+}
+
 .post-titles {
   display: flex;
-  margin-bottom: 10px;
 }
 @media (min-width: 850px) {
   .post-titles {
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    align-items: end;
+    gap: 10px;
   }
 }
 @media (max-width: 850px) {
@@ -209,18 +230,12 @@ code {
 
 .post-subtitle {
   color: #50fa7b;
-  font-size: 1.25em;
-}
-@media (min-width: 850px) {
-  .post-subtitle {
-    margin-left: auto;
-    text-align: right;
-  }
+  font-size: 1.5em;
 }
 
 .post-info {
   display: flex;
-  gap: 5px;
+  flex-direction: column;
   margin-bottom: 15px;
   align-items: flex-start;
 }
@@ -228,12 +243,6 @@ code {
   .post-info {
     flex-direction: column;
   }
-}
-
-.post-date {
-  background-color: #50fa7b;
-  font-family: monospace;
-  color: #282a36;
 }
 
 .title-date {
@@ -261,22 +270,14 @@ code {
   display: flex;
   gap: 5px;
 }
-@media (min-width: 850px) {
-  .post-tags {
-    margin-left: auto;
-  }
-}
-
-.post-tag {
-  background-color: #f2f2f2;
-  font-family: monospace;
-  color: #282a36;
-}
 
 .post-info-item {
   font-weight: bold;
-  padding: 2px 5px 2.5px 5px;
   border-radius: 5px;
+}
+
+a .post-tag:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=blog.css.map */
