[fix] Switch around title text

--- a/src/includes/components/title.liquid
+++ b/src/includes/components/title.liquid
@@ -2,7 +2,7 @@
   <h1 class="title">
     {% if page.url == "/" %}
     Hello!
-    {% else if page.title %}
+    {% else if series %}
     {{ series }}
     {% else %}
     {{ title }}
